--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,7 +7,7 @@
 		<h4 class="card-header bg-dark text-white">{{ post.title }}</h4>
 		<div class="card-body">
 			<p>{{ post.created_at }},  {{ post.category }}</p>
-			<a href="#!" class="btn btn-dark">続きを読む</a>
+			<a href="{% url 'blog:detail' post.pk %}" class="btn btn-dark">続きを読む</a>
 		</div>
 	</div>
 	{% endfor %}
